# stringMaker

./: .gitmodules  CMakeLists.txt  README.md  amalgamate.bat  amalgamate.sh
.github/workflows/: BuildLinux.yml  CompilerCheckClang16.yml  CompilerCheckClang17.yml  CompilerCheckCygwin.yml  CompilerCheckGCC13.yml  CompilerCheckGCC14.yml  CompilerCheckMinGW.yml  CompilerCheckMinGW12.yml
benchmarks/: CMakeLists.txt  alignMemory.cpp  compare.cpp  compareCDR.cpp  dynamicLocatedOpt.cpp  helper.hpp  hft.cpp  makeAggr.cpp  memcpyBench.cpp  zeroCostCheck.cpp
include/strMaker/: all.hpp  full.hpp  strMaker.hpp
include/strMaker/core/: aggregator.hpp  config.hpp  makeAggregator.hpp  memory.hpp
include/strMaker/patterns/: apply.hpp  customType.hpp  dynamicLocated.hpp  errorHandler.hpp  pattern.hpp  quotedString.hpp  runtimeFloat.hpp  runtimeIntegral.hpp  runtimeString.hpp  staticString.hpp
include/strMaker/storage/: localStorage.hpp  ringBufferStorage.hpp  storage.hpp
include/strMaker/utils/: constexprString.hpp  numberHelper.hpp  pragmaHelper.hpp  template.hpp
single_include/strMaker/: all.hpp  fwd.hpp
tests/: CMakeLists.txt  commonTest.cpp  helperTest.hpp
tests/bench/: hftTest.cpp
tests/core/: commonTest.cpp  compilationTest.cpp  configTest.cpp  constepxrStringTest.cpp  dynamicModeTest.cpp  errorInputTest.cpp  exceptionSafety.cpp  makeAggregatorTest.cpp  preInitMode.cpp  preInitModeTest.cpp  preInitOnlyMode.cpp  preInitOnlyModeTest.cpp
tests/patterns/: RuntimeIntegralTest.cpp  applyTest.cpp  customTypeTest.cpp  dynamicLocatedTest.cpp  errorHandler.cpp  quotedTest.cpp  runtimeFloatTest.cpp  runtimeStringTest.cpp
tests/storage/: localStorageTest.cpp  ringBufferStorageTest.cpp
tools/: amalgamate_config_all.json  amalgamate_config_fwd.json
